[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Loja.gd" type="Script" id=1]
[ext_resource path="res://Fontes/Fonte.tres" type="DynamicFont" id=2]
[ext_resource path="res://Sprites/Menus/Coffin.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Menus/BackButton.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Menus/Fundo.png" type="Texture" id=5]

[node name="Loja" type="Node2D"]
script = ExtResource( 1 )

[node name="Fundo" type="Sprite" parent="."]
position = Vector2( 320.494, 180.705 )
texture = ExtResource( 5 )

[node name="Voltar" type="ToolButton" parent="."]
margin_right = 44.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
icon = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Itens" type="Label" parent="."]
margin_left = 274.977
margin_top = 26.0294
margin_right = 330.977
margin_bottom = 40.0294
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LojaTurnosfogoDescricao" type="Label" parent="Itens"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -197.01
margin_top = 55.5763
margin_right = -81.01
margin_bottom = 66.5763
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Amuleto de Fogo"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LojaTurnosfogoComprar" type="ToolButton" parent="Itens"]
margin_left = -175.0
margin_top = 70.0
margin_right = -100.0
margin_bottom = 170.0
icon = ExtResource( 3 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LojaTurnosfogoPreco" type="Label" parent="Itens"]
margin_left = -157.0
margin_top = 150.0
margin_right = -125.0
margin_bottom = 164.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "$100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LojaTurnosaguaDescricao" type="Label" parent="Itens"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -22.0
margin_top = 57.0
margin_right = 94.0
margin_bottom = 71.0
custom_fonts/font = ExtResource( 2 )
text = "Amuleto de Agua"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LojaTurnosaguaComprar" type="ToolButton" parent="Itens"]
margin_left = 0.594604
margin_top = 70.0
margin_right = 75.5946
margin_bottom = 170.0
icon = ExtResource( 3 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LojaTurnosaguaPreco" type="Label" parent="Itens"]
margin_left = 20.1007
margin_top = 149.058
margin_right = 52.1007
margin_bottom = 164.058
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "$100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LojaTurnosterraDescricao" type="Label" parent="Itens"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -198.344
margin_top = 213.527
margin_right = -83.3441
margin_bottom = 227.527
custom_fonts/font = ExtResource( 2 )
text = "Amuleto de Terra"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LojaTurnosterraComprar" type="ToolButton" parent="Itens"]
anchor_left = -0.0100218
anchor_right = -0.0100218
margin_left = -174.439
margin_top = 225.0
margin_right = -99.4388
margin_bottom = 325.0
icon = ExtResource( 3 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LojaTurnosterraPreco" type="Label" parent="Itens"]
margin_left = -156.764
margin_top = 304.652
margin_right = -124.764
margin_bottom = 318.652
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "$100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LojaTurnosarDescricao" type="Label" parent="Itens"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -14.4258
margin_top = 213.138
margin_right = 82.5742
margin_bottom = 227.138
custom_fonts/font = ExtResource( 2 )
text = "Amuleto de Ar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LojaTurnosarComprar" type="ToolButton" parent="Itens"]
margin_top = 225.0
margin_right = 75.0
margin_bottom = 325.0
icon = ExtResource( 3 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LojaTurnosarPreco" type="Label" parent="Itens"]
margin_left = 18.4031
margin_top = 304.281
margin_right = 50.4031
margin_bottom = 318.281
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "$100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LojaPontosDescricao" type="Label" parent="Itens"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 133.796
margin_top = 57.7022
margin_right = 284.796
margin_bottom = 72.7022
custom_fonts/font = ExtResource( 2 )
text = "Amuleto de Habilidade"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LojaPontosComprar" type="ToolButton" parent="Itens"]
anchor_left = 0.0133776
anchor_right = 0.0133776
margin_left = 174.251
margin_top = 225.0
margin_right = 249.251
margin_bottom = 325.0
icon = ExtResource( 3 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LojaPontosPreco" type="Label" parent="Itens"]
margin_left = 193.166
margin_top = 304.43
margin_right = 225.166
margin_bottom = 318.43
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "$200"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LojaXPDescricao" type="Label" parent="Itens"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 160.592
margin_top = 212.743
margin_right = 258.592
margin_bottom = 226.743
custom_fonts/font = ExtResource( 2 )
text = "Amuleto de XP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LojaXPComprar" type="ToolButton" parent="Itens"]
margin_left = 175.0
margin_top = 70.0
margin_right = 250.0
margin_bottom = 170.0
icon = ExtResource( 3 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LojaXPPreco" type="Label" parent="Itens"]
margin_left = 193.154
margin_top = 149.025
margin_right = 225.154
margin_bottom = 163.025
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "$500"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Moedas" type="Label" parent="Itens"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 0.629974
margin_top = -0.629959
margin_right = 78.63
margin_bottom = 13.37
custom_fonts/font = ExtResource( 2 )
text = "100 Moedas"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="Voltar" to="." method="_on_Voltar_button_down"]
[connection signal="button_down" from="Itens/LojaTurnosfogoComprar" to="." method="_on_LojaTurnosfogoComprar_button_down"]
[connection signal="button_down" from="Itens/LojaTurnosaguaComprar" to="." method="_on_LojaTurnosaguaComprar_button_down"]
[connection signal="button_down" from="Itens/LojaTurnosterraComprar" to="." method="_on_LojaTurnosterraComprar_button_down"]
[connection signal="button_down" from="Itens/LojaTurnosarComprar" to="." method="_on_LojaTurnosarComprar_button_down"]
[connection signal="button_down" from="Itens/LojaPontosComprar" to="." method="_on_LojaPontosComprar_button_down"]
[connection signal="button_down" from="Itens/LojaXPComprar" to="." method="_on_LojaXPComprar_button_down"]
